[gd_scene load_steps=7 format=3 uid="uid://chybeyd6bjxbj"]

[ext_resource type="Script" path="res://Scenes/wild_life/wildAnimal.gd" id="1_if7t8"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_041ik"]
albedo_color = Color(0.980392, 0.6, 0.458824, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_oxn8s"]
material = SubResource("StandardMaterial3D_041ik")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_bmwpq"]

[sub_resource type="BoxShape3D" id="BoxShape3D_rxkn0"]
size = Vector3(10, 2, 8)

[sub_resource type="SphereShape3D" id="SphereShape3D_hfijb"]

[node name="Deer" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.771713, 0)
script = ExtResource("1_if7t8")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("CapsuleMesh_oxn8s")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CapsuleShape3D_bmwpq")

[node name="Vision" type="Area3D" parent="."]
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="Vision"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 3.03679, 9.05206)
shape = SubResource("BoxShape3D_rxkn0")

[node name="Escape" type="Area3D" parent="."]
collision_layer = 3
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="Escape"]
transform = Transform3D(40, 0, 0, 0, 40, 0, 0, 0, 40, 0, 0, 0)
shape = SubResource("SphereShape3D_hfijb")

[node name="DangerZone" type="Area3D" parent="."]
collision_layer = 3
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="DangerZone"]
transform = Transform3D(15, 0, 0, 0, 15, 0, 0, 0, 15, 0, 0, 0)
shape = SubResource("SphereShape3D_hfijb")

[node name="roamingCooldown" type="Timer" parent="."]

[node name="rotationCooldown" type="Timer" parent="."]

[connection signal="body_entered" from="Vision" to="." method="_on_area_3d_body_entered"]
[connection signal="body_entered" from="Escape" to="." method="_on_escape_body_entered"]
[connection signal="body_exited" from="Escape" to="." method="_on_escape_body_exited"]
[connection signal="body_entered" from="DangerZone" to="." method="_on_danger_zone_body_entered"]
